# graphqltask_task_6

./: DEVELOPMENT_GUIDELINES.md  README.md  pyproject.toml
docs/api/: index.html
src/graphqlwork/: main.py
src/graphqlwork/router/: schema.py
